# PIANO

./: .gitignore  MANIFEST.in  README.md  demo.py  pyproject.toml  run_create_features.py  run_create_wsi_list.py  run_generate_patches.py  update_tissuenet_json.py
piano/: __init__.py  piano.py  piano_timm.py  slide_feat_tools.py  slide_patch_tools.py
piano.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
piano/datasets/: roi_datasets.py  wsi_datasets.py
piano/roi_classification/: roi_finetune_tools.py
piano/utils/: utils.py
piano/wsi_classification/: __init__.py  mil_baselines.py  wsi_finetune_tools.py
piano/wsi_preprocess/: slide_feat_tools.py  slide_patch_tools.py
scripts/roi_classification/: run_roi_infer.py  run_roi_train.py
scripts/wsi_classification/: run_wsi_infer.py  run_wsi_train.py
scripts/wsi_preprocess/: 1_run_generate_wsi_list.py  3_run_create_patchdir_list.py  4_run_create_wsi_features.py  run_create_wsi_features.py  run_generate_patches.py  run_generate_wsi_list.py
transform_configs/: create_patch_feats_transforms.yaml  roi_classification_transforms.yaml
